# vss-rust-client-ffi

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  build.sh  build_android.sh  build_ios.sh  build_python.sh  uniffi.toml
.github/workflows/: gradle-publish.yml
bindings/android/: README.md  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts  vss_rust_client_ffi.kt
bindings/android/src/main/kotlin/com/synonym/vssclient/: vss_rust_client_ffi.kt
bindings/ios/: vss_rust_client_ffi.swift  vss_rust_client_ffiFFI.h
bindings/ios/VssRustClientFfi.xcframework/: Info.plist
bindings/ios/VssRustClientFfi.xcframework/ios-arm64-simulator/Headers/: module.modulemap  vss_rust_client_ffiFFI.h
bindings/python/: README.md  setup.py
bindings/python/vss_rust_client_ffi/: vss_rust_client_ffi.py
src/: errors.rs  ffi_tests.rs  implementation.rs  lib.rs  tests.rs  types.rs
