[package]
name = "vss-rust-client-ffi"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "vss_rust_client_ffi"


[dependencies]
uniffi = { version = "0.25.3", features = [ "cli" ] }
serde = { version = "^1.0.209", features = ["derive"] }
tokio = "1.40.0"
once_cell = "1.19.0"
thiserror = "2.0.12"
vss-client = "0.3"
bitcoin = "0.32.0"
bip39 = "2.0.0"
prost = "0.11.6"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }

# Override to use vendored OpenSSL for Android builds
[target.'cfg(target_os = "android")'.dependencies.openssl-sys]
version = "*"
features = ["vendored"]
